added google analytics

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <img id="pic" src="" alt="">
         <p id="caption"></p>
         <script src="./main.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKQ1S2FFQN"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-JKQ1S2FFQN');
+        </script>
     </div>
 </body>
 </html>
