--- a/index.html
+++ b/index.html
@@ -11,17 +11,10 @@
     <div class="main">
         <h1 id="title"></h1>
         <img id="pic" src="" alt="">
+        <p id="source">Source: <a id="link" target=”_blank”></a></p>
         <p id="caption"></p>
+        <h4 id="credit"></h4>
         <script src="./main.js"></script>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKQ1S2FFQN"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'G-JKQ1S2FFQN');
-        </script>
     </div>
 </body>
 </html>
