--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Mars Perseverance Pictures</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main">
-        <h1 id="title"></h1>
-        <img id="pic" src="" alt="">
-        <p id="source">Source: <a id="link" target=”_blank”></a></p>
-        <p id="caption"></p>
-        <h4 id="credit"></h4>
-        <script src="./main.js"></script>
+      <h1 id="title"></h1>
+      <div class="pic-viewer">
+        <img id="pic" src="" alt="" />
+      </div>
+      <button id="fullscreen">Fullscreen</button>
+      <p id="source">Source: <a id="link" target="”_blank”"></a></p>
+      <p id="caption"></p>
+      <h4 id="credit"></h4>
+      <script src="./main.js"></script>
     </div>
-</body>
+  </body>
 </html>
